# SuperKit

./: main.py  mkdocs.yml  pyproject.toml
_test-apps/1_init_test_my-superkit-app/src/: main.py
_test-apps/2_apps_test/src/: main.py
_test-apps/2_apps_test/src/config/: settings.py
docs/: index.md
docs/cli/: overview.md
docs/cli/commands/: init.md  run.md
docs/getting-started/: installation.md  project-structure.md  quickstart.md
docs/package/: overview.md
docs/package/application/: settings.md  superkitapp.md
docs/package/logging/: advanced.md  attachments.md  overview.md  user-logs.md
docs/stylesheets/: extra.css
my-superkit-app/src/: main.py
my-superkit-app/src/config/: settings.py
obsidian-docs/: 1_General.md  2_Application_Entry_Point.md  3_Apps.md  4_Routing_System.md
obsidian-docs/.obsidian/: workspace.json
src/superkit/: __init__.py  settings.py
src/superkit/api/: app_factory.py  application.py
src/superkit/apps/: __init__.py  config.py  discovery.py  selection.py
src/superkit/lifecycle/: mount_apps.py
src/superkit/logging/: __init__.py  handler.py  record.py  setup.py
src/superkit/routing/: __init__.py  controller_group.py  discovery.py  router.py
src/superkit/runtime/: bootstrap.py  registry.py
src/superkit_cli/: bootstrap_loader.py  cli.py
src/superkit_cli/scaffold/: renderer.py
src/superkit_cli/ui/: setup_wizard.py
src/superkit_cli/utils/: project.py
src/test_structure/src/: main.py  settings.py
superkit/: __init__.py
superkit/api/: app_factory.py
test_structure/: main.py  settings.py
(+29 files in other folders)
