[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Project Configuration
[project]
name = "superkit"
version = "0.1.0"
description = "A batteries-included framework on top of FastAPI that adds structure, conventions, and tooling without magic."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
]

# CLI Configuration
[project.scripts]
superkit = "superkit_cli.cli:main"

# Src-Layout configuration
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
